--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "AdditionalAkiGifts",
-    "version": "0.9.0",
+    "name": "AdditionalSptGifts",
+    "version": "1.0.0",
     "main": "src/mod.js",
     "license": "MIT",
     "author": "Redmisty",
-    "akiVersion": "3.*.*",
+    "sptVersion": "~3.9",
     "isBundleMod": false,
     "scripts": {
         "setup": "npm i",
